# physical-oceanography

./: .gitignore  INSTALL.md  README.md  stack.yaml
GSW/: GSW.cabal  GSW.cabal.old  Gentoolbox.hs  LICENSE  Makefile  size_r14.f90
GSW/Oceanogr/: GSW.hs  GSWcaller.hs  GSWtools.hs
GSW/Test/: SimpleDynamicHeightTest.hs  SimpleToolTest.hs
GSW/gsw_fortran/: gsw_oceanographic_toolbox.f90
gamma-n/: gamma-n.cabal  stack.yaml
gamma-n/Oceanogr/: GammaN.hs
gamma-n/Test/: SimpleGammaNTest.hs
gamma-n/fortran/: patch.gamma
observation/: cabal.project  cabal.project.freeze  observation.cabal  stack.yaml
observation/Oceanogr/: Bottle.hs  CTD.hs  CtoS.hs  FSparam.hs  LADCP.hs  XCTD.hs
observation/Oceanogr/CTD/: Z.hs
observation/example/: MR1609.hs  MakeList.hs  PlotSection.hs  SBEproc.hs
oceanogr/: LICENSE  WGHC.ctl  cabal.project  oceanogr.cabal  patch.hstatistics  stack.yaml
oceanogr/Oceanogr/: BinaryIO.hs  CARS.hs  EOF.hs  ETOPO5.hs  LPF.hs  LeastSquare.hs  LeastSquares.hs  Misc.hs  NCRepa.hs  PSD.hs  RepaExpand1.hs  SAM.hs  Statistics.hs  WGHC.hs
