name:                gamma-n
-- just go with oceanogr/
version:             0.3.0.0
-- synopsis:            
-- description:         
license:             OtherLicense
license-file:        LICENSE
-- author:              
maintainer:          katsumata@eps.s.u-tokyo.ac.jp
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  fortran/patch.gamma
cabal-version:       >=1.10


library
  exposed-modules:     Oceanogr.GammaN
  other-extensions:    ForeignFunctionInterface
  build-depends:       base,
                       ieee754
                    
  default-language:    Haskell2010
  ghc-options:         -O -Wall

Test-Suite simpleGammaN
   type: exitcode-stdio-1.0
   main-is: SimpleGammaNTest.hs
   build-depends:       base,
                        gamma-n
   default-language:    Haskell2010
   hs-source-dirs: Test
   extra-libraries: gfortran, netcdff
   ld-options:          /home/user/lib/FORTRAN/gamma/gamma.a
