name:                observation
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.2.1.1
-- synopsis:            
-- description:         Please see README.md
license:             OtherLicense
license-file:        LICENSE
-- author:              kkats
maintainer:          k.katsumata@jamstec.go.jp
build-type:          Simple
extra-source-files:  example/MakeList.hs
                     example/SBEproc.hs
                     example/PlotSection.hs
cabal-version:       >=1.10

library
  ghc-options:         -Wall -O2
  other-extensions:    OverloadedStrings
  exposed-modules:     Oceanogr.CTD,
                       Oceanogr.CTD.Z,
                       Oceanogr.LADCP,
                       Oceanogr.FSparam,
                       Oceanogr.XCTD,
                       Oceanogr.CtoS
  build-depends:       base,
                       oceanogr,
                       attoparsec,
                       bytestring,
                       filepath,
                       ieee754,
                       unix-time,
                       vector,
                       vector-algorithms,
                       GSW,
                       gamma-n
  default-language:    Haskell2010
