-- Modules useful analysis of observed data
-- also those modules which depend on GSW and/or gamma-n
name:                observation
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.3.0.0
-- synopsis:            
-- description:         Please see README.md
license:             OtherLicense
license-file:        LICENSE
maintainer:          katsumata@eps.s.u-tokyo.ac.jp
build-type:          Simple
extra-source-files:  example/MakeList.hs
                     example/SBEproc.hs
                     example/PlotSection.hs
cabal-version:       >=1.10

library
  other-extensions:    OverloadedStrings
  exposed-modules:     Oceanogr.CTD,
                       Oceanogr.CTD.Z,
                       Oceanogr.LADCP,
                       Oceanogr.FSparam,
                       Oceanogr.XCTD,
                       Oceanogr.CtoS,
                       Oceanogr.CARS,
                       Oceanogr.Bottle
  build-depends:       base,
                       oceanogr,
                       attoparsec,
                       bytestring,
                       cassava,
                       filepath,
                       hnetcdf,
                       ieee754,
                       repa,
                       unix-time,
                       vector,
                       vector-algorithms,
                       GSW, gamma-n
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
